<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_layout_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_accountinfo_modify_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/personal_accounts_modify"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/account_name"
        android:textColor="@color/black"
        android:textSize="16.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/login_item_selector_corners"
        android:orientation="horizontal"
        android:padding="10sp" >

        <EditText
            android:id="@+id/ed_modify_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/edit_account_tips"
            android:padding="5.0dip"
            android:paddingRight="30dp"
            android:textColor="#ff3b3b3b"
            android:textSize="16.0sp" >
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/account_phone"
        android:textColor="@color/black"
        android:textSize="16.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/login_item_selector_corners"
        android:orientation="horizontal"
        android:padding="10sp" >

        <EditText
            android:id="@+id/ed_modify_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/edit_phone_tips"
            android:inputType="phone"
            android:padding="5.0dip"
            android:paddingRight="30dp"
            android:textColor="#ff3b3b3b"
            android:textSize="16.0sp" >
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/weibo_account_modify"
        android:textColor="@color/black"
        android:textSize="16.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/login_item_selector_corners"
        android:orientation="horizontal"
        android:padding="10sp" >

        <EditText
            android:id="@+id/ed_modify_weiboaccount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/weibo_account"
            android:padding="5.0dip"
            android:paddingRight="30dp"
            android:textColor="#ff3b3b3b"
            android:textSize="16.0sp" >
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/cardnum"
        android:textColor="@color/black"
        android:textSize="16.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/login_item_selector_corners"
        android:orientation="horizontal"
        android:padding="10sp" >

        <EditText
            android:id="@+id/ed_modify_cardnum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/creaditcard"
            android:padding="5.0dip"
            android:paddingRight="30dp"
            android:textColor="#ff3b3b3b"
            android:textSize="16.0sp" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/modify_btn"
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/modify" />

</LinearLayout>