<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/android_layout_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/shopcart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/shoppingcart"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shopcart_title_layout_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopcart_title"
        android:background="@drawable/shoppingcart_delete_default"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/shopcart_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:singleLine="true"
            android:text="@string/login_tips" />
    </LinearLayout>
    
    <LinearLayout
            android:layout_below="@id/shopcart_title_layout_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shoppingcart_listbg"
            android:orientation="vertical" >
<!-- 此处添加listview -->
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:scaleType="centerInside"
                android:src="@drawable/shoppingcart_no_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/cart_tips"
                android:textSize="16sp" />
        </LinearLayout>

</RelativeLayout>