<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/android_layout_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/register"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_register_title"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/android_layout_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_must_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:text="@string/tv_must_select"
                android:textColor="@color/black"
                android:textSize="16.0sp" />

            <LinearLayout
                android:id="@+id/title_must_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_must_select"
                android:layout_margin="10dp"
                android:background="@drawable/login_background_ed"
                android:orientation="vertical"
                android:padding="1dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/login_item_selector_corners"
                    android:orientation="horizontal"
                    android:padding="10sp" >

                    <EditText
                        android:id="@+id/ed_register_account"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:hint="@string/edit_account_tips"
                        android:padding="5.0dip"
                        android:paddingRight="30dp"
                        android:textColor="#ff3b3b3b"
                        android:textSize="16.0sp" >
                    </EditText>
                </LinearLayout>

                <View style="@style/Line" />

                <LinearLayout
                    android:id="@+id/layout_ed_password_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/login_item_selector_corners"
                    android:orientation="horizontal"
                    android:padding="10sp" >

                    <EditText
                        android:id="@+id/ed_register_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:hint="@string/edit_password_tips"
                        android:inputType="textPassword"
                        android:padding="5.0dip"
                        android:paddingRight="30dp"
                        android:textColor="#ff3b3b3b"
                        android:textSize="16.0sp" >
                    </EditText>
                </LinearLayout>

                <View style="@style/Line" />

                <LinearLayout
                    android:id="@+id/layout_ed_phone_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/login_item_selector_corners"
                    android:orientation="horizontal"
                    android:padding="10sp" >

                    <EditText
                        android:id="@+id/ed_phone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:hint="@string/edit_phone_tips"
                        android:inputType="phone"
                        android:padding="5.0dip"
                        android:paddingRight="30dp"
                        android:textColor="#ff3b3b3b"
                        android:textSize="16.0sp" >
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_optional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_must_select"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:text="@string/tv_optional"
                android:textColor="@color/black"
                android:textSize="16.0sp" />

            <LinearLayout
                android:id="@+id/title_optional_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_optional"
                android:layout_margin="10dp"
                android:background="@drawable/login_background_ed"
                android:orientation="vertical"
                android:padding="1dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/login_item_selector_corners"
                    android:orientation="horizontal"
                    android:padding="10sp" >

                    <EditText
                        android:id="@+id/ed_register_weibo_account"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:hint="@string/weibo_account"
                        android:padding="5.0dip"
                        android:paddingRight="30dp"
                        android:textColor="#ff3b3b3b"
                        android:textSize="16.0sp" >
                    </EditText>
                </LinearLayout>

                <View style="@style/Line" />

                <LinearLayout
                    android:id="@+id/layout_ed_register_creaditcard"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/login_item_selector_corners"
                    android:orientation="horizontal"
                    android:padding="10sp" >

                    <EditText
                        android:id="@+id/ed_register_creaditcard"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:hint="@string/creaditcard"
                        android:inputType="textPassword"
                        android:padding="5.0dip"
                        android:paddingRight="30dp"
                        android:textColor="#ff3b3b3b"
                        android:textSize="16.0sp" >
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_optional_select"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>